# vaer

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE.md  README.md
app_backend/: Cargo.toml
board/: Vaer.kicad_pcb  Vaer.kicad_prl  Vaer.kicad_pro  Vaer.kicad_sch  fp-lib-table  sym-lib-table
board/Library.pretty/: ESP32-S3-WROOM-1.kicad_mod  GCT_USB4105-GF-A.kicad_mod  MOLEX_105450-0101.kicad_mod
board/components/: 105450-0101.kicad_sym  Espressif.kicad_sym  USB4105-GF-A.kicad_sym
board/libraries/: GSB1C211110DS1HR.step
board/libraries/amphenol/usbc/GSB1C211110DS1HR.pretty/: AMPHENOL_GSB1C211110DS1HR.kicad_mod
board/libraries/molex/usbc/usbc.pretty/: MOLEX_105450-0101.kicad_mod
board/libraries/onsemi/eeprom/: 2024-06-18_04-27-18.kicad_sym
board/libraries/onsemi/eeprom/eeprom.pretty/: SOIC8_ONS-L.kicad_mod  SOIC8_ONS-M.kicad_mod  SOIC8_ONS.kicad_mod
